    between them, the attach of the deleted would fail
    internally. The formerly "pending" objects are now expunged
    first. [ticket:1674]
    
  - Slight improvement to the fix for [ticket:1362] to not issue 
    needless updates of the primary key column during a so-called
    "row switch" operation, i.e. add + delete of two objects
    with the same PK.
    
- sql
  - Added math negation operator support, -x.
  
  - FunctionElement subclasses are now directly executable the
    same way any func.foo() construct is, with automatic 
    SELECT being applied when passed to execute().
    
  - The "type" and "bind" keyword arguments of a func.foo() 
    construct are now local to "func." constructs and are 
    not part of the FunctionElement base class, allowing 
    a "type" to be handled in a custom constructor or 
    class-level variable.
    
- mssql
  - Re-established initial support for pymssql.
  
0.6beta1
========
- Major Release
  - For the full set of feature descriptions, see
    http://www.sqlalchemy.org/trac/wiki/06Migration .
    This document is a work in progress.

  - All bug fixes and feature enhancements from the most
    recent 0.5 version and below are also included within 0.6.

  - Platforms targeted now include Python 2.4/2.5/2.6, Python
    3.1, Jython2.5.
    
- orm
  - Changes to query.update() and query.delete():
      - the 'expire' option on query.update() has been renamed to
        'fetch', thus matching that of query.delete().  
        'expire' is deprecated and issues a warning.

      - query.update() and query.delete() both default to
        'evaluate' for the synchronize strategy.

      - the 'synchronize' strategy for update() and delete()
        raises an error on failure. There is no implicit fallback
        onto "fetch". Failure of evaluation is based on the
        structure of criteria, so success/failure is deterministic
        based on code structure.

  - Enhancements on many-to-one relations: